--- a/src/components/.gitattributes
+++ b/src/components/.gitattributes
@@ -1,1 +1,10 @@
+# Automatically normalize line endings
 * text=auto
+
+# Explicitly specify LF for certain file types
+*.tsx text eol=lf
+*.ts text eol=lf
+*.css text eol=lf
+*.html text eol=lf
+*.json text eol=lf
+*.md text eol=lf
